# bdk_wallet

./: README.md
examples/: bitcoind_rpc.rs  compiler.rs  electrum_v3.rs  esplora_async.rs  esplora_blocking.rs
examples/example_wallet_electrum_redb/: Cargo.toml
examples/example_wallet_electrum_redb/src/: main.rs
examples/example_wallet_esplora_async_redb/: Cargo.toml
examples/example_wallet_esplora_async_redb/src/: main.rs
examples/example_wallet_esplora_blocking_redb/: Cargo.toml
examples/example_wallet_esplora_blocking_redb/src/: main.rs
examples/example_wallet_rpc_redb/: Cargo.toml  README.md
examples/example_wallet_rpc_redb/src/: main.rs
src/: persist_test_utils.rs  test_utils.rs  types.rs
src/descriptor/: error.rs  template.rs
src/wallet/: changeset.rs  error.rs  event.rs  export.rs  mod.rs  params.rs  persisted.rs  signer.rs  tx_builder.rs
tests/: add_foreign_utxo.rs  build_fee_bump.rs  common.rs  persisted_wallet.rs  psbt.rs  wallet.rs
wallet/: Cargo.toml
wallet/src/: persist_test_utils.rs
