[package]
name = "example_wallet_rpc_redb"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
bdk_wallet = { version = "2.0.0" }
bdk_bitcoind_rpc = { version = "0.20.0" }

anyhow = "1"
clap = { version = "4.5.17", features = ["derive", "env"] }
ctrlc = "3.4.6"
bdk_redb = { git = "https://github.com/110CodingP/bdk_redb" }